--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
         <title>Calculator</title>
     </head>
 
     <body>
-
+        <h1 id="main-heading">Calculator</h1>
+        <div id="calculator-body">
+            
+        </div>
+        <footer> Blah</footer>
     </body>
 </html>
