--- a/index.html
+++ b/index.html
@@ -11,8 +11,46 @@
 
     <body>
         <h1 id="main-heading">Calculator</h1>
-        <div id="calculator-body">
-            
+        <div id="calculator">
+            <div id="calculator-body">
+                <div id="display">
+                    <input type="text" id="display-text" value="0" readonly>
+                </div>
+                <div id="buttons">
+                    <div class="button-row" id="row1">
+                        <button id="clear" onclick="clearDisplay()">C</button>
+                        <button id="backspace" onclick="backspace()">&larr;</button>
+                        <button id="divide" onclick="divide()">&divide;</button>
+                    </div>
+
+                    <div class="button-row" id="row2">
+                        <button id="seven" onclick="seven()">7</button>
+                        <button id="eight" onclick="eight()">8</button>
+                        <button id="nine" onclick="nine()">9</button>
+                        <button id="multiply" onclick="multiply()">&times;</button>
+                    </div>
+
+                    <div class="button-row" id="row3">
+                        <button id="four" onclick="four()">4</button>
+                        <button id="five" onclick="five()">5</button>
+                        <button id="six" onclick="six()">6</button>
+                        <button id="subtract" onclick="subtract()">&minus;</button>
+                    </div>
+
+                    <div class="button-row" id="row4">
+                            <button id="one" onclick="one()">1</button>
+                            <button id="two" onclick="two()">2</button>
+                            <button id="three" onclick="three()">3</button>
+                            <button id="add" onclick="add()">&plus;</button>
+                    </div>
+
+                    <div class="button-row" id="row5">
+                        <button id="zero" onclick="zero()">0</button>
+                        <button id="decimal" onclick="decimal()">.</button>
+                        <button id="equals" onclick="equals()">=</button>
+                    </div>                   
+                </div>
+            </div>
         </div>
         <footer> Blah</footer>
     </body>
