added button event listeners, other css/html changes

--- a/index.html
+++ b/index.html
@@ -18,36 +18,36 @@
                 </div>
                 <div id="buttons">
                     <div class="button-row" id="row1">
-                        <button id="clear" onclick="clearDisplay()">C</button>
-                        <button id="backspace" onclick="backspace()">&larr;</button>
-                        <button id="divide" onclick="divide()">&divide;</button>
+                        <button id="clear" onclick="clearDisplay()" value="C">C</button>
+                        <button id="backspace" onclick="backspace()" value="&larr;">&larr;</button>
+                        <button id="divide" onclick="divide()" value="&divide;">&divide;</button>
                     </div>
 
                     <div class="button-row" id="row2">
-                        <button id="seven" onclick="seven()">7</button>
-                        <button id="eight" onclick="eight()">8</button>
-                        <button id="nine" onclick="nine()">9</button>
-                        <button id="multiply" onclick="multiply()">&times;</button>
+                        <button id="seven" value=7>7</button>
+                        <button id="eight" value=8>8</button>
+                        <button id="nine" value=9>9</button>
+                        <button id="multiply" value="&times;">&times;</button>
                     </div>
 
                     <div class="button-row" id="row3">
-                        <button id="four" onclick="four()">4</button>
-                        <button id="five" onclick="five()">5</button>
-                        <button id="six" onclick="six()">6</button>
-                        <button id="subtract" onclick="subtract()">&minus;</button>
+                        <button id="four" value=4>4</button>
+                        <button id="five" value=5>5</button>
+                        <button id="six" value=6>6</button>
+                        <button id="subtract" onclick="subtract()" value="&minus;">&minus;</button>
                     </div>
 
                     <div class="button-row" id="row4">
-                            <button id="one" onclick="one()">1</button>
-                            <button id="two" onclick="two()">2</button>
-                            <button id="three" onclick="three()">3</button>
-                            <button id="add" onclick="add()">&plus;</button>
+                            <button id="one" value=1>1</button>
+                            <button id="two" value=2>2</button>
+                            <button id="three" value=3>3</button>
+                            <button id="add" onclick="add()" value="&plus;">&plus;</button>
                     </div>
 
                     <div class="button-row" id="row5">
-                        <button id="zero" onclick="zero()">0</button>
-                        <button id="decimal" onclick="decimal()">.</button>
-                        <button id="equals" onclick="equals()">=</button>
+                        <button id="zero" value=0>0</button>
+                        <button id="decimal" onclick="decimal()" value=".">.</button>
+                        <button id="equals" onclick="equals()" value="=">=</button>
                     </div>                   
                 </div>
             </div>
