updated logic, still need to fix some errors

--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
                     <div class="button-row" id="row1">
                         <button id="clear" onclick="clearDisplay()" value="C">C</button>
                         <button id="backspace" onclick="backspace()" value="&larr;">&larr;</button>
-                        <button id="divide" onclick="divide()" value="&divide;">&divide;</button>
+                        <button id="divide" onclick="divide()" value="/">&divide;</button>
                     </div>
 
                     <div class="button-row" id="row2">
                         <button id="seven" value=7>7</button>
                         <button id="eight" value=8>8</button>
                         <button id="nine" value=9>9</button>
-                        <button id="multiply" value="&times;">&times;</button>
+                        <button id="multiply" onclick="multiply()" value="*">&times;</button>
                     </div>
 
                     <div class="button-row" id="row3">
                         <button id="four" value=4>4</button>
                         <button id="five" value=5>5</button>
                         <button id="six" value=6>6</button>
-                        <button id="subtract" onclick="subtract()" value="&minus;">&minus;</button>
+                        <button id="subtract" onclick="subtract()" value="-">&minus;</button>
                     </div>
 
                     <div class="button-row" id="row4">
                             <button id="one" value=1>1</button>
                             <button id="two" value=2>2</button>
                             <button id="three" value=3>3</button>
-                            <button id="add" onclick="add()" value="&plus;">&plus;</button>
+                            <button id="add" onclick="add()" value="+">&plus;</button>
                     </div>
 
                     <div class="button-row" id="row5">
                         <button id="zero" value=0>0</button>
                         <button id="decimal" onclick="decimal()" value=".">.</button>
-                        <button id="equals" onclick="equals()" value="=">=</button>
+                        <button id="equals" onclick="operate()" value="=">=</button>
                     </div>                   
                 </div>
             </div>
