added backspace functionality, removed decimal option

--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
                             <button id="one" value=1>1</button>
                             <button id="two" value=2>2</button>
                             <button id="three" value=3>3</button>
-                            <button id="add" onclick="add()" value="+">&plus;</button>
+                            <button id="add" value="+">&plus;</button>
                     </div>
 
                     <div class="button-row" id="row5">
                         <button id="zero" value=0>0</button>
-                        <button id="decimal" onclick="decimal()" value=".">.</button>
-                        <button id="equals" onclick="operate()" value="=">=</button>
+                        <button id="equals" value="=">=</button>
                     </div>                   
                 </div>
             </div>
